2014-09-29  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33286: Src/exec.c, Test/A04redirect.ztst: handle redirections
	for multiple named functions.

	* 33285: NEWS, Src/exec.c, Src/hashtable.c, Src/parse.c,
	Src/signals.c, Src/zsh.h, Test/A04redirect.ztst: redirections in
	function definitions are applied at execution not definition.

2014-09-29  Frank Terbeck  <ft@bewatermyfriend.org>

	* 33277: Functions/VCS_Info/VCS_INFO_reposub: Fix
	VCS_INFO_reposub's command expansion

2014-09-29  Peter Stephenson  <p.stephenson@samsung.com>

	* users/19183: Src/hist.c: handle unlikely error case with
	fdopen() better.

	* 33276: Src/params.c, Src/zsh.h: safer import of numerical
	variables from environment.

2014-09-28  Barton E. Schaefer  <schaefer@zsh.org>

	* 33268: Src/exec.c, Src/init.c, Src/signals.c: interactive shells
	treat SIGPIPE like SIGHUP if and only if SHTTY is disconnected

2014-09-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 33256: Src/prompt.c: fix prompttrunc() counting of %{ %} spans

2014-09-26  Peter Stephenson  <p.stephenson@samsung.com>

	* 33242: Src/parse.c: don't treat tokens immediately following
	end of shell constructs for, while, repeat, if as being in
	command position.

	* Wieland Hoffmann: 33252: Completion/Unix/Command/_notmuch:
	complete more subcommands.

2014-09-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* users/19143: Src/glob.c: **/*(odonT) didn't work because
	the trailing slash wasn't properly ignored.

2014-09-25  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: NEWS: tweak last change.

2014-09-24  Oliver Kiddle  <opk@zsh.org>

	* 33238: Completion/Unix/Command/_quilt: correct return values

2014-09-24  Peter Stephenson  <p.stephenson@samsung.com>

	* Eric Cook: 33224: Completion/Linux/Command/_btrfs: complete
	directory as second argument.

2014-09-23  Barton E. Schaefer  <schaefer@zsh.org>

	* 33223: Completion/Base/Utility/_call_program: discard stderr
	except when _complete_debug is in progress.
